# coc-ttrpg

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
config/: app.yaml
data/: weapons.py
src/: __init__.py
src/agents/: __init__.py  base.py  character_mgr.py  combat.py  dual_keepers.py  game_master.py  hierarchical_keeper.py  keeper_router.py  keeper_supervisor.py  memory_curator.py  skill_check.py  story_gen.py
src/api/: app.py
src/api/routes/: character.py  game.py  pages.py  usage.py  websocket.py
src/api/templates/: base.html  character_create.html  game.html  index.html  module_browser.html  module_generate.html  usage.html
src/config/: __init__.py  settings.py
src/graph/: edges.py  game_graph.py  nodes.py  state.py
src/middleware/: context_builder.py  game_loop.py  opening_prompt.py  token_tracker.py
src/models/: character.py  game_state.py  messages.py  story_module.py
src/modules/: __init__.py  loader.py  schema.py
src/modules/samples/: __init__.py  beloved_wife.json  beyond_the_wall.json  la_no_peace.json  paper_chase.json  paradise_of_silence.json  poisoned_soup.json  poppy_for_you.json
src/rules/: __init__.py  character_creation.py  combat_rules.py  dice.py  health.py  luck.py  sanity.py  skill_check.py  skill_list.py  weapon_presets.py
src/storage/: database.py  repositories.py
tests/: conftest.py  test_character_creation.py  test_combat.py  test_combat_integration.py  test_dice.py  test_health.py  test_keeper_router.py  test_luck.py  test_sanity.py  test_skill_check.py  test_unified_kp.py
(+1 files in other folders)
